crates/edifact-rs-derive/tests/ui/fail_group_with_composite.stderr
error: field `lines`: #[edifact(composite)] cannot be combined with #[edifact(group)]
  --> $DIR/fail_group_with_composite.rs:15:15
   |
15 |     #[edifact(composite, group)]
   |               ^^^^^^^^^
